--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     
+    <div class="whole-quote">
+        <div class="quote js-quote">
+        </div>
+    
+        <div class="writer js-writer">
+        </div>
+
+    </div>
 
 
 
